syntax = "proto3";

package keyauth.micro;
option go_package = "github.com/infraboard/keyauth/pkg/micro";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "pkg/micro/pb/enum.proto";

// Micro is service provider
message Micro {
     // 微服务ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 服务所属域
    string domain = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
    // 创建人
    string creater = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
        ];
    // 创建的时间
    int64 create_at = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at,omitempty"'}
        ];
    // 更新时间
    int64 update_at = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at,omitempty"'}
        ];
    // 服务账号
    string account = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account"'}
        ];
    // 服务客户端ID
    string client_id = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"client_id" json:"client_id"'}
        ];
    // 服务客户端凭证
    string client_secret = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"client_secret" json:"client_secret"'}
        ];
    // 是否启动客户端
    bool client_enabled = 9 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"client_enabled" json:"client_enabled"'}
        ];
    // 客户端刷新时间
    int64 client_refresh_at = 10 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"client_refresh_at" json:"client_refresh_at"'}
        ];
    // 是否启用该服务
    bool enabled = 11[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"enabled" json:"enabled"'}
        ];
    // 服务类型
    Type type = 12[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 名称
    string name = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
    // 服务标签
    map<string, string> label = 14[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label" json:"label"'}
        ];
    // 描述信息
    string description = 15[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description,omitempty"'}
        ];
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Micro items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}