syntax = "proto3";

package keyauth.micro;
option go_package = "github.com/infraboard/keyauth/pkg/micro";

import "pkg/micro/pb/enum.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";

// ValidateClientCredentialRequest 校验服务凭证
message ValidateClientCredentialRequest {
    // 服务客户端ID
    string client_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"client_id" validate:"required,lte=100"'}
        ];
    // 服务客户端凭证
    string client_secret = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"client_secret" validate:"required,lte=100"'}
        ];                  
}

// CreateMicroRequest 服务创建请求
message CreateMicroRequest {
    // 服务类型
    Type type = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 名称
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name" validate:"required,lte=200"'}
        ];
    // 服务标签
    map<string, string> label = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label" json:"label" validate:"lte=80"'}
        ];
    // 描述信息
    string description = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description,omitempty"'}
        ];                  
}

// QueryMicroRequest 查询应用列表
message QueryMicroRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"page"'}
        ];
    // 服务类型
    Type type = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"type"'}
        ];
}

// DescribeMicroRequest 查询应用详情
message DescribeMicroRequest {
    string client_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"client_id"'}
        ];
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"name"'}
        ];
    string id = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
}

// DeleteMicroRequest todo
message DeleteMicroRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
}